@@ -38,41 +38,26 @@ import java.io.InputStream;
 import java.io.UnsupportedEncodingException;
 import java.net.InetAddress;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
-import java.util.Properties;
 import java.util.Map.Entry;
+import java.util.Properties;
 import java.util.Set;
 import java.util.logging.Logger;
 
-import javax.servlet.http.HttpServletRequest;
-import javax.ws.rs.core.HttpHeaders;
-import javax.ws.rs.core.MultivaluedHashMap;
-import javax.ws.rs.core.MultivaluedMap;
-import javax.ws.rs.core.Response;
-import javax.ws.rs.core.UriInfo;
-
-import net.aegis.fhir.model.Constants;
-import net.aegis.fhir.model.ResourceType;
-import net.aegis.fhir.service.narrative.FHIRNarrativeGeneratorClient;
-
 import org.apache.commons.text.StringEscapeUtils;
 import org.apache.http.NameValuePair;
-import org.hl7.fhir.r4.formats.IParser.OutputStyle;
 import org.hl7.fhir.convertors.factory.VersionConvertorFactory_40_50;
+import org.hl7.fhir.r4.formats.IParser.OutputStyle;
 import org.hl7.fhir.r4.formats.JsonParser;
 import org.hl7.fhir.r4.formats.XmlParser;
 import org.hl7.fhir.r4.model.Bundle;
+import org.hl7.fhir.r4.model.Bundle.BundleEntryComponent;
 import org.hl7.fhir.r4.model.CanonicalType;
 import org.hl7.fhir.r4.model.CodeType;
-import org.hl7.fhir.r4.model.Bundle.BundleEntryComponent;
-import org.hl7.fhir.r4.model.Parameters.ParametersParameterComponent;
-import org.hl7.fhir.r5.model.SubscriptionStatus;
-import org.hl7.fhir.r5.model.Enumerations.SubscriptionStatusCodes;
-import org.hl7.fhir.r5.model.SubscriptionStatus.SubscriptionNotificationType;
-import org.hl7.fhir.r5.model.SubscriptionStatus.SubscriptionStatusNotificationEventComponent;
 import org.hl7.fhir.r4.model.CodeableConcept;
 import org.hl7.fhir.r4.model.Coding;
 import org.hl7.fhir.r4.model.Composition;
@@ -81,9 +66,26 @@ import org.hl7.fhir.r4.model.InstantType;
 import org.hl7.fhir.r4.model.Meta;
 import org.hl7.fhir.r4.model.OperationOutcome;
 import org.hl7.fhir.r4.model.Parameters;
+import org.hl7.fhir.r4.model.Parameters.ParametersParameterComponent;
 import org.hl7.fhir.r4.model.Reference;
 import org.hl7.fhir.r4.model.Resource;
 import org.hl7.fhir.r4.model.StringType;
+import org.hl7.fhir.r5.model.Enumerations.SubscriptionStatusCodes;
+import org.hl7.fhir.r5.model.SubscriptionStatus;
+import org.hl7.fhir.r5.model.SubscriptionStatus.SubscriptionNotificationType;
+import org.hl7.fhir.r5.model.SubscriptionStatus.SubscriptionStatusNotificationEventComponent;
+import org.xmlpull.v1.XmlPullParserException;
+
+import com.google.gson.JsonSyntaxException;
+
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.ws.rs.core.HttpHeaders;
+import jakarta.ws.rs.core.MultivaluedHashMap;
+import jakarta.ws.rs.core.MultivaluedMap;
+import jakarta.ws.rs.core.Response;
+import net.aegis.fhir.model.Constants;
+import net.aegis.fhir.model.ResourceType;
+import net.aegis.fhir.service.narrative.FHIRNarrativeGeneratorClient;
 
 /**
  * ServicesUtil - Common methods used across the services layer
@@ -126,7 +128,6 @@ public enum ServicesUtil {
 		catch (Exception e) {
 			// Handle generic exceptions
 			log.severe(e.getMessage());
-			e.printStackTrace();
 			throw e;
 		}
 
@@ -158,7 +159,6 @@ public enum ServicesUtil {
 		catch (Exception e) {
 			// Handle generic exceptions
 			log.severe(e.getMessage());
-			e.printStackTrace();
 			throw e;
 		}
 
@@ -210,7 +210,6 @@ public enum ServicesUtil {
 		catch (Exception e) {
 			// Handle generic exceptions
 			log.severe(e.getMessage());
-			e.printStackTrace();
 			throw e;
 		}
 
@@ -256,7 +255,6 @@ public enum ServicesUtil {
 		catch (Exception e) {
 			// Handle generic exceptions
 			log.severe(e.getMessage());
-			e.printStackTrace();
 			throw e;
 		}
 
@@ -266,43 +264,53 @@ public enum ServicesUtil {
 	/**
 	 *
 	 * @param headers
-	 * @param context
+	 * @param request
 	 * @return produces type based on request Accept header value
 	 * @throws Exception
 	 */
-	public String getProducesType(HttpHeaders headers, UriInfo context) throws Exception {
+	public String getProducesType(HttpHeaders headers, HttpServletRequest request) throws Exception {
 
-		log.fine("[START] ServicesUtil.getProducesType(headers, context)");
+		log.fine("[START] ServicesUtil.getProducesType(headers, request)");
 
-		return getProducesType(headers, context, null);
+		return getProducesType(headers, request, null);
 	}
 
 	/**
 	 *
 	 * @param headers
-	 * @param context
+	 * @param request
+	 * @param formMap
 	 * @return produces type based on request Accept header value
 	 * @throws Exception
 	 */
-	public String getProducesType(HttpHeaders headers, UriInfo context, MultivaluedMap<String,String> formMap) throws Exception {
+	public String getProducesType(HttpHeaders headers, HttpServletRequest request, MultivaluedMap<String,String> formMap) throws Exception {
 
-		log.fine("[START] ServicesUtil.getProducesType(headers, context, formMap)");
+		log.fine("[START] ServicesUtil.getProducesType(headers, request, formMap)");
 
 		// Default produces type to XML
 		String producesType = null;
 
 		try {
-			if (context != null || formMap != null) {
+			if (request != null || formMap != null) {
 				log.fine("Checking for _format parameter...");
 
 				// Get the query parameters that represent the search criteria
 				Set<Entry<String, List<String>>> paramSet = new HashSet<Entry<String, List<String>>>();
 
-				if (context != null) {
-					MultivaluedMap<String, String> queryParams = context.getQueryParameters();
+				if (request != null) {
+					MultivaluedMap<String, String> queryParams = new MultivaluedHashMap<>();
+					String queryString = request.getQueryString();
 
-					if (queryParams != null && queryParams.size() > 0) {
-						Set<Entry<String, List<String>>> parameterSet = queryParams.entrySet();
+					if (queryString != null && !queryString.isEmpty()) {
+						queryString = URLDecoder.decode(queryString, StandardCharsets.UTF_8);
+					    for (String pair : queryString.split("&")) {
+					        int idx = pair.indexOf("=");
+					        String key   = idx > 0 ? pair.substring(0, idx) : pair;
+					        String value = idx > 0 ? pair.substring(idx + 1) : "";
+					        queryParams.add(key, value);
+					    }
+
+					    Set<Entry<String, List<String>>> parameterSet = queryParams.entrySet();
 
 						paramSet.addAll(parameterSet);
 					}
@@ -369,7 +377,7 @@ public enum ServicesUtil {
 						producesType = "text/xml";
 					}
 					else {
-						// If json or xml in contentType, return current R3+ valid mime type
+						// If json or xml in contentType, return current STU3 valid mime type
 						if (contentType.indexOf("json") >= 0) {
 							producesType = "application/fhir+json";
 						}
@@ -393,7 +401,6 @@ public enum ServicesUtil {
 		catch (Exception e) {
 			// Handle generic exceptions
 			log.severe(e.getMessage());
-			e.printStackTrace();
 			throw e;
 		}
 
@@ -403,25 +410,34 @@ public enum ServicesUtil {
 	/**
 	 *
 	 * @param paramName
-	 * @param context
+	 * @param request
 	 * @return string value of uri parameter; null if not present
 	 * @throws Exception
 	 */
-	public String getUriParameter(String paramName, UriInfo context) throws Exception {
+	public String getUriParameter(String paramName, HttpServletRequest request) throws Exception {
 
-		log.fine("[START] ServicesUtil.getUriParameter(" + paramName + ", context)");
+		log.fine("[START] ServicesUtil.getUriParameter(" + paramName + ", request)");
 
 		// Default parameter value to null
 		String paramValue = null;
 
 		try {
-			if (paramName != null && context != null) {
+			if (paramName != null && request != null) {
 				log.fine("Checking for " + paramName + " parameter...");
 
 				// Get the query parameters that represent the search criteria
-				MultivaluedMap<String, String> queryParams = context.getQueryParameters();
+				MultivaluedMap<String, String> queryParams = new MultivaluedHashMap<>();
+				String queryString = request.getQueryString();
 
-				if (queryParams != null && queryParams.size() > 0) {
+				if (queryString != null && !queryString.isEmpty()) {
+					queryString = URLDecoder.decode(queryString, StandardCharsets.UTF_8);
+				    for (String pair : queryString.split("&")) {
+				        int idx = pair.indexOf("=");
+				        String key   = idx > 0 ? pair.substring(0, idx) : pair;
+				        String value = idx > 0 ? pair.substring(idx + 1) : "";
+				        queryParams.add(key, value);
+				    }
+
 					Set<Entry<String, List<String>>> paramSet = queryParams.entrySet();
 
 					for (Entry<String, List<String>> entry : paramSet) {
@@ -441,7 +457,6 @@ public enum ServicesUtil {
 		catch (Exception e) {
 			// Handle generic exceptions
 			log.severe(e.getMessage());
-			e.printStackTrace();
 			throw e;
 		}
 
@@ -486,7 +501,6 @@ public enum ServicesUtil {
 		catch (Exception e) {
 			// Handle generic exceptions
 			log.severe(e.getMessage());
-			e.printStackTrace();
 			throw e;
 		}
 
@@ -541,7 +555,6 @@ public enum ServicesUtil {
 		catch (Exception e) {
 			// Handle generic exceptions
 			log.severe(e.getMessage());
-			e.printStackTrace();
 			throw e;
 		}
 
@@ -1066,7 +1079,10 @@ public enum ServicesUtil {
 			if (hostname.equals("localhost")) {
 				// InetAddress did not resolve; try OS hostname
 				try {
-					Process p = Runtime.getRuntime().exec("hostname");
+					ProcessBuilder builder = new ProcessBuilder("hostname");
+					builder.inheritIO();
+					Process p = builder.start();
+					p.waitFor();
 					byte[] bytes = p.getInputStream().readAllBytes();
 					hostname = new String(bytes,"ASCII").trim();
 				}
@@ -1354,6 +1370,30 @@ public enum ServicesUtil {
 	}
 
 	/**
+	 * Return the query parameters from the Request as a MultivaluedMap
+	 *
+	 * @param request
+	 * @return MultivaluedMap
+	 */
+	public MultivaluedMap<String, String> parseRequestQuery(HttpServletRequest request) {
+
+		// Get the query parameters from the Request
+		MultivaluedMap<String, String> queryParams = new MultivaluedHashMap<String, String>();
+		String queryString = request.getQueryString();
+		if (queryString != null && !queryString.isEmpty()) {
+			queryString = URLDecoder.decode(queryString, StandardCharsets.UTF_8);
+			for (String pair : queryString.split("&")) {
+				int idx = pair.indexOf("=");
+				String key = idx > 0 ? pair.substring(0, idx) : pair;
+				String value = idx > 0 ? pair.substring(idx + 1) : "";
+				queryParams.add(key, value);
+			}
+		}
+
+		return queryParams;
+	}
+
+	/**
 	 * Returns the elapsed time as a formatted string
 	 *
 	 * @param startMillis
@@ -1390,15 +1430,17 @@ public enum ServicesUtil {
 	/**
 	 * build response for fhir version mismatch
 	 * @param headers
-	 * @return
+	 * @param request
+	 * @param supportedFhirVersion
+	 * @return Response
 	 * @throws Exception
 	 */
-	public Response fhirVersioMismatchedResponse(HttpHeaders headers, String supportedFhirVersion, UriInfo context) throws Exception {
+	public Response fhirVersioMismatchedResponse(HttpHeaders headers, HttpServletRequest request, String supportedFhirVersion) throws Exception {
 
 		log.fine("Begin ServicesUtil.fhirVersioNotnMismatchedResponse()");
 
 		Response.ResponseBuilder builder = null;
-		String producesType = getProducesType(headers, context);
+		String producesType = getProducesType(headers, request);
 
 		log.fine("fhirVersionMatched.producesType: " + producesType);
 
@@ -1476,8 +1518,10 @@ public enum ServicesUtil {
 			}
 		}
 		catch (Exception e) {
+			// Handle generic exceptions
 			log.severe(e.getMessage());
 			e.printStackTrace();
+			// Exception not thrown to allow operation to complete
 		}
 
 		log.fine("fhirVersionMatched:" + versionMatched);
@@ -1804,6 +1848,132 @@ public enum ServicesUtil {
 		return parameters;
     }
 
+    public Resource convertToR4Resource(String contentType, String resourceType, String payload) throws Exception, JsonSyntaxException, XmlPullParserException {
+    	Resource resource = null;
+
+    	// Check for special R5 resource types: SubscriptionStatus, SubscriptionTopic
+    	if (resourceType.equals("SubscriptionStatus") || resourceType.equals("SubscriptionTopic")) {
+    		org.hl7.fhir.r5.model.Resource resourceR5 = this.convertToR5Resource(contentType, payload);
+
+    		if (resourceType.equals("SubscriptionStatus")) {
+    			// convert SubscriptionStatus to R4 resource
+    			resource = ServicesUtil.INSTANCE.convertR5SubscriptionStatusToR4Parameters(resourceR5);
+    		}
+    		else if (resourceType.equals("SubscriptionTopic")) {
+    			// convert SubscriptionTopic to R4 resource
+    			resource = VersionConvertorFactory_40_50.convertResource(resourceR5);
+    		}
+    	}
+    	else {
+	    	try {
+				if (contentType.indexOf("xml") >= 0) {
+					// Convert XML contents to Resource
+					XmlParser xmlP = new XmlParser();
+					resource = xmlP.parse(payload.getBytes());
+				}
+				else if (contentType.indexOf("json") >= 0) {
+					// Convert JSON contents to Resource
+					JsonParser jsonP = new JsonParser();
+					resource = jsonP.parse(payload.getBytes());
+				}
+				else {
+					// contentType did not contain a valid media type or was null; attempt to determine based on starting character
+					int firstValid = payload.indexOf("<"); // check for xml first
+					if (firstValid > -1 && firstValid < 5) {
+						if (firstValid > 0) {
+							payload = payload.substring(firstValid);
+						}
+						// Convert XML contents to Resource
+						contentType = "xml";
+						XmlParser xmlP = new XmlParser();
+						resource = xmlP.parse(payload.getBytes());
+					}
+					else {
+						firstValid = payload.indexOf("{"); // check for json next
+						if (firstValid > -1 && firstValid < 5) {
+							if (firstValid > 0) {
+								payload = payload.substring(firstValid);
+							}
+							// Convert JSON contents to Resource
+							contentType = "json";
+							JsonParser jsonP = new JsonParser();
+							resource = jsonP.parse(payload.getBytes());
+						}
+					}
+				}
+			}
+			catch (Exception e) {
+				// Log original exception
+				e.printStackTrace();
+				// JSON or XML FHIR parsing failed, content is not a valid FHIR resource; throw appropriate exception to catch below
+				if (contentType.indexOf("json") >= 0) {
+					throw new JsonSyntaxException(e.getMessage());
+				}
+				else {
+					// Default to XML exception
+					throw new XmlPullParserException(e.getMessage());
+				}
+			}
+    	}
+
+    	return resource;
+    }
+
+    public org.hl7.fhir.r5.model.Resource convertToR5Resource(String contentType, String payload) throws Exception {
+    	org.hl7.fhir.r5.model.Resource resource = null;
+
+		try {
+			if (contentType.indexOf("xml") >= 0) {
+				// Convert XML contents to Resource
+				org.hl7.fhir.r5.formats.XmlParser xmlP = new org.hl7.fhir.r5.formats.XmlParser();
+				resource = xmlP.parse(payload.getBytes());
+			}
+			else if (contentType.indexOf("json") >= 0) {
+				// Convert JSON contents to Resource
+				org.hl7.fhir.r5.formats.JsonParser jsonP = new org.hl7.fhir.r5.formats.JsonParser();
+				resource = jsonP.parse(payload.getBytes());
+			}
+			else {
+				// contentType did not contain a valid media type or was null; attempt to determine based on starting character
+				int firstValid = payload.indexOf("<"); // check for xml first
+				if (firstValid > -1 && firstValid < 5) {
+					if (firstValid > 0) {
+						payload = payload.substring(firstValid);
+					}
+					// Convert XML contents to Resource
+					contentType = "xml";
+					org.hl7.fhir.r5.formats.XmlParser xmlP = new org.hl7.fhir.r5.formats.XmlParser();
+					resource = xmlP.parse(payload.getBytes());
+				}
+				else {
+					firstValid = payload.indexOf("{"); // check for json next
+					if (firstValid > -1 && firstValid < 5) {
+						if (firstValid > 0) {
+							payload = payload.substring(firstValid);
+						}
+						// Convert JSON contents to Resource
+						contentType = "json";
+						org.hl7.fhir.r5.formats.JsonParser jsonP = new org.hl7.fhir.r5.formats.JsonParser();
+						resource = jsonP.parse(payload.getBytes());
+					}
+				}
+			}
+		}
+		catch (Exception e) {
+			// Log original exception
+			e.printStackTrace();
+			// JSON or XML FHIR parsing failed, content is not a valid FHIR resource; throw appropriate exception to catch below
+			if (contentType.indexOf("json") >= 0) {
+				throw new JsonSyntaxException(e.getMessage());
+			}
+			else {
+				// Default to XML exception
+				throw new XmlPullParserException(e.getMessage());
+			}
+		}
+
+    	return resource;
+    }
 
 	/*
 	 * Public getters and setters
